--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -12,7 +12,7 @@
   "repository": "<project_name>",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "electron": "1.7.5",
+    "electron": "^1.7.5",
     "electron-packager": "9.0.0"
   }
 }
