--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "build": "node_modules/.bin/electron .",
     "package": "node_modules/.bin/electron-packager . lina_dicto --platform=all --arch=x64",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "testtotest": "mocha test/mocha.js"
   },
   "author": "michinari.nukazawa@gmail.com",
   "repository": "<project_name>",
   "license": "BSD-2-Clause",
+  "directories": {
+    "test": "test/"
+  },
   "devDependencies": {
     "electron": "^1.8.1",
-    "electron-packager": "9.0.0"
+    "electron-packager": "9.0.0",
+    "intelli-espower-loader": "^1.0.1",
+    "mocha": "^4.0.1",
+    "power-assert": "^1.4.4"
   }
 }
