--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node_modules/.bin/electron .",
     "package": "node_modules/.bin/electron-packager . lina_dicto --platform=all --arch=x64",
-    "test": "mocha",
+    "test": "mocha --require babel-register",
     "testtotest": "mocha test/mocha.js"
   },
   "author": "michinari.nukazawa@gmail.com",
@@ -16,6 +16,9 @@
     "test": "test/"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "electron": "^1.8.1",
     "electron-packager": "9.0.0",
     "intelli-espower-loader": "^1.0.1",
