--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -22,9 +22,12 @@
     "babel-register": "^6.26.0",
     "electron": "^1.8.1",
     "electron-installer-debian": "^0.7.1",
-    "electron-packager": "9.0.0",
+    "electron-packager": "10.1.0",
     "intelli-espower-loader": "^1.0.1",
     "mocha": "^4.0.1",
     "power-assert": "^1.4.4"
+  },
+  "dependencies": {
+    "npm-check-updates": "^2.13.0"
   }
 }
