--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -15,6 +15,9 @@
   "directories": {
     "test": "test/"
   },
+  "dependencies": {
+    "electron": "^1.8.3"
+  },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -25,8 +28,5 @@
     "intelli-espower-loader": "^1.0.1",
     "mocha": "^4.0.1",
     "power-assert": "^1.4.4"
-  },
-  "dependencies": {
-    "npm": "^5.6.0"
   }
 }
