--- a/lina_dicto/installer_debian_amd64_config.json
+++ b/lina_dicto/installer_debian_amd64_config.json
@@ -1,7 +1,7 @@
 {
 	"name": "lina-dicto",
-	"src": "../release/lina_dicto-linux-x64/",
-	"dest": "../release/",
+	"src": "../release/release/lina_dicto-linux-x64/",
+	"dest": "../release/release/",
 	"arch": "amd64",
 	"icon": "image/icon.png",
 	"categories": [
