--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -16,6 +16,7 @@
     "test": "test/"
   },
   "dependencies": {
+    "about-window": "^1.12.1",
     "electron": "^2.0.8"
   },
   "devDependencies": {
