--- a/lina_dicto/installer_debian_amd64_config.json
+++ b/lina_dicto/installer_debian_amd64_config.json
@@ -1,6 +1,6 @@
 {
 	"name": "lina-dicto",
-	"src": "../release/release/lina_dicto-linux-x64/",
+	"src": "./release/linux/lina_dicto-linux-x64/",
 	"dest": "../release/release/",
 	"arch": "amd64",
 	"icon": "image/icon.png",
