--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -4,9 +4,18 @@
   "description": "Dictionary of Japanese to Esperanto",
   "main": "index.js",
   "scripts": {
-    "build": "electron .",
+    "running": "electron .",
+    "build": "npm run build:osx && npm run build:win && npm run build:linux",
     "debian_installer_debian": "electron-installer-debian --config ./installer_debian_amd64_config.json",
     "test": "bash ./pretest.sh && mocha --require intelli-espower-loader --require babel-register ",
+    "clean": "rm -rf ./release",
+    "clean:osx": "rm -rf ./release/osx",
+    "clean:win": "rm -rf ./release/win",
+    "clean:linux": "rm -rf ./release/linux",
+    "pack": "npm run pack:osx && npm run pack:win && npm run pack:linux",
+    "pack:win": "npm run clean:win && electron-packager . --out=./release/win --platform=win32 --arch=x64 --icon='./image/icon.ico' --ignore='release' --ignore='object' --ignore='work' --ignore='test'",
+    "pack:osx": "npm run clean:osx && electron-packager . --out=./release/osx --platform=darwin --arch=x64 --icon='./image/icon.icns' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/'",
+    "pack:linux": "npm run clean:linux && electron-packager . --out=./release/linux --platform=linux --arch=x64 --icon='./image/icon.png' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/'",
     "testtotest": "mocha test/mocha.js"
   },
   "author": "michinari.nukazawa@gmail.com",
@@ -16,13 +25,13 @@
     "test": "test/"
   },
   "dependencies": {
-    "about-window": "^1.12.1",
-    "electron": "^2.0.8"
+    "about-window": "^1.12.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
+    "electron": "^2.0.8",
     "electron-installer-debian": "^0.8.1",
     "electron-packager": "^12.1.1",
     "intelli-espower-loader": "^1.0.1",
