--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.15",
   "description": "Dictionary of Japanese to Esperanto",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "running": "electron .",
     "build": "npm run build:osx && npm run build:win && npm run build:linux",
