--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ language: node_js
 node_js:
   - "10"
   - "9"
-  - "8"
 
 addons:
   apt:
     packages:
     - make
+    - wine
 
 # need spectron test
 before_script:
