arabic numerals(ex. 104) to esperanto string write format(ex. cent kvar).

--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -26,7 +26,8 @@
     "test": "test/"
   },
   "dependencies": {
-    "about-window": "^1.12.1"
+    "about-window": "^1.12.1",
+    "write-int": "0.0.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
