japanese tokenizer by kuromozi, cleanup Linad, input lock for wakeup.

--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "about-window": "^1.12.1",
+    "kuromoji": "^0.1.2",
     "write-int": "0.0.2"
   },
   "devDependencies": {
