--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -36,19 +36,20 @@
     "test": "test/"
   },
   "dependencies": {
-    "about-window": "^1.13.0",
+    "about-window": "^1.13.1",
     "kuromoji": "^0.1.2",
+    "npm-check-updates": "^3.1.20",
     "write-int": "0.0.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "electron": "^5.0.6",
+    "electron": "^5.0.7",
     "electron-installer-debian": "^2.0.0",
-    "electron-packager": "^14.0.1",
+    "electron-packager": "^14.0.2",
     "intelli-espower-loader": "^1.0.1",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.0",
     "power-assert": "^1.6.1",
     "spectron": "^7.0.0"
   }
