--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ addons:
     #- wine
 
 # need spectron test
+services:
+  - xvfb
 before_script:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
 
 script:
   - make ci-test
