--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lina_dicto",
-  "version": "0.2.3",
+  "version": "0.2.6",
   "description": "Dictionary of Japanese to Esperanto",
   "main": "index.js",
   "private": true,
@@ -11,11 +11,13 @@
     "test": "mocha --require intelli-espower-loader",
     "clean": "rm -rf ./release",
     "clean:osx": "rm -rf ./release/osx",
+    "clean:mas": "rm -rf ./release/mas",
     "clean:win": "rm -rf ./release/win",
     "clean:linux": "rm -rf ./release/linux",
     "pack": "npm run pack:osx && npm run pack:win && npm run pack:linux",
     "pack:win": "npm run clean:win && electron-packager . --out=./release/win --platform=win32 --arch=x64 --icon='./image/icon.ico' --ignore='release' --ignore='object' --ignore='work' --ignore='test'",
     "pack:osx": "npm run clean:osx && electron-packager . --out=./release/osx --platform=darwin --arch=x64 --icon='./image/icon.icns' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/'",
+    "pack:mas": "npm run clean:mas && electron-packager . --out=./release/mas --platform=mas --arch=x64 --icon='./image/icon.icns' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/' --ignore='\\.o(bj)?$' --app-bundle-id='com.michinari-nukazawa.lina-dicto-for-desktop'",
     "pack:linux": "npm run clean:linux && electron-packager . --out=./release/linux --platform=linux --arch=x64 --icon='./image/icon.png' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/'",
     "testtotest": "mocha test/mocha.js"
   },
