--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -15,7 +15,7 @@
     "clean:linux": "rm -rf ./release/linux",
     "pack": "npm run pack:osx && npm run pack:win && npm run pack:linux",
     "pack:win": "npm run clean:win && electron-packager . --out=./release/win --platform=win32 --arch=x64 --icon='./image/icon.ico' --ignore='release' --ignore='object' --ignore='work' --ignore='test' --ignore='dictionary_source/'",
-    "pack:osx": "npm run clean:osx && electron-packager . --out=./release/osx --platform=darwin --arch=x64 --icon='./image/icon.icns' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/' --ignore='dictionary_source/'",
+    "pack:osx": "npm run clean:osx && electron-packager . --out=./release/osx --platform=darwin --arch=x64 --icon='./image/icon.icns' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/' --ignore='dictionary_source/' --darwinDarkModeSupport=true",
     "pack:linux": "npm run clean:linux && electron-packager . --out=./release/linux --platform=linux --arch=x64 --icon='./image/icon.png' --ignore='release/' --ignore='object/' --ignore='work/' --ignore='test/' --ignore='dictionary_source/'",
     "testtotest": "mocha test/mocha.js"
   },
