--- a/lina_dicto/package.json
+++ b/lina_dicto/package.json
@@ -2,10 +2,11 @@
   "name": "lina_dicto",
   "version": "0.2.14",
   "description": "Dictionary of Japanese to Esperanto",
-  "main": "index.js",
+  "main": "main.js",
   "private": true,
   "scripts": {
     "running": "electron .",
+    "watch": "watchify src/index.js -o js/bundle.js -v",
     "build": "npm run build:osx && npm run build:win && npm run build:linux",
     "debian_installer_debian": "electron-installer-debian --config ./installer_debian_amd64_config.json",
     "test": "mocha --require intelli-espower-loader",
@@ -36,7 +37,8 @@
     "test": "test/"
   },
   "dependencies": {
-    "about-window": "^1.13.4",
+    "about-window": "^1.15.2",
+    "electron-context-menu": "^3.6.0",
     "kuromoji": "^0.1.2",
     "write-int": "0.0.2"
   },
@@ -44,12 +46,13 @@
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "electron": "^11.0.3",
+    "electron": "^21.2.3",
     "electron-installer-debian": "^3.1.0",
-    "electron-packager": "^15.1.0",
-    "intelli-espower-loader": "^1.0.1",
-    "mocha": "^8.2.1",
+    "electron-packager": "^17.1.1",
+    "intelli-espower-loader": "^1.1.0",
+    "mocha": "^10.1.0",
     "power-assert": "^1.6.1",
-    "spectron": "^13.0.0"
+    "spectron": "^19.0.0",
+    "watchify": "^4.0.0"
   }
 }
